<resources>
    <string name="app_name">CalendarTest</string>
    <string name="action_settings">Settings</string>
    <string name="add_event_name">活動名稱</string>
    <string name="add_event_location">活動地點</string>
    <string name="add_event_all_day">全天活動</string>
    <string name="add_event_repeat_frequency">重複頻率</string>
    <string-array name="repeat_frequency">
        <item name="once">單次活動</item>
        <item name="everyday">每天</item>
        <item name="every_workday">每個工作日</item>
        <item name="every_week">每週</item>
        <item name="every_month">每月</item>
        <item nema="every_year">每年</item>
    </string-array>

    <string name="add_event_privacy">隱私權</string>
    <string-array name="privacy">
        <item name="event_public">公開</item>
        <item name="event_private">私人</item>
    </string-array>

    <string name="add_event_remind">提醒</string>
    <string-array name="remind">
        <item name="5minutes">5分鐘</item>
        <item name="10minutes">10分鐘</item>
        <item name="15minutes">15分鐘</item>
        <item name="20minutes">20分鐘</item>
        <item name="25minutes">25分鐘</item>
        <item name="30minutes">30分鐘</item>
        <item name="1hour">1小時</item>
        <item name="2hours">2小時</item>
        <item name="3hours">3小時</item>
        <item name="12hours">12小時</item>
        <item name="24hours">24小時</item>
        <item name="two_day">2天</item>
        <item name="one_week">一週</item>
    </string-array>

    <string name="add_event_description">活動說明</string>
</resources>
